# tgc-ai-mvp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  context7-best-practices.md
scripts/: inspect_db.py  run_ingest.py  serve.py
src/: api.py  config.py
src/ingest/: __init__.py  chunker.py  embedder.py  index_builder.py
src/rag/: __init__.py  answer.py  retriever.py
src/scraper/: __init__.py  parser.py  sitemap.py
static/: index.html
tests/: test_api.py  test_chunker.py  test_parser.py  test_sitemap.py
